--- a/static/css/Login.css
+++ b/static/css/Login.css
@@ -51,12 +51,14 @@
 }
 #background
 {
-	background: url('/static/Images/job2.jpg') no-repeat center;
-	background-size: cover;
+	background-image: url("../Images/job2.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     width: 100%;
-    height: 100%;
+    height: 100%; 
     opacity: 0.6;
-
+ 
 }
 
 
@@ -65,3 +67,32 @@
 	margin-top: 200px;
 
 }
+
+.Back
+{
+
+	background-image: url("../Images/background3.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+#back
+{
+	background-image: url("../Images/background1.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    border-radius: 10%;
+}
+
+
+#back1
+{
+	background-image: url("../Images/background.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+	border-radius:6%;
+}
+
