--- a/templates/adminPanel.html
+++ b/templates/adminPanel.html
@@ -1,20 +1,18 @@
 <html>
-
 <head>
-    <title>Posting Jobs</title>
+	<title>Posting Jobs</title>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/Login.css') }}">
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Montserrat|Open+Sans|Raleway&display=swap" rel="stylesheet">
-    <link href="static/fontawesome/css/all.css" rel="stylesheet">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="../static/css/Login.css">
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Montserrat|Open+Sans|Raleway&display=swap" rel="stylesheet">
+  <link href="../static/fontawesome/css/all.css" rel="stylesheet">
+  
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <style></style>
 </head>
-
 <body>
     <script>
         $(document).ready(function() {
@@ -30,7 +28,7 @@
     <section id="title">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-            <h2><img src="static/Images/Logo.jpg"><sub>  Opportunities</sub></h2>
+            <h2><img src="../static/Images/Logo.jpg"><sub>  Opportunities</sub></h2>
             <div class="d-flex">
                 <div class="dropdown col-md" style="margin-left: 800px;">
                     <button type="button" class="btn btn-success dropdown-toggle btn-sm my-2 my-sm-0 ml-auto" id="dropdownMenuOffset" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="10,20" style="border-radius: 50%;border: none;">
@@ -54,7 +52,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="Home.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Post Jobs</a>
@@ -98,7 +96,7 @@
                     </div>
                                 <section id="btn-submit" style="margin-top: 50px;">
                 <div class="row">
-                    <div class=col-md-2>
+                    <div class=col-md-2 style="margin-left: 10px;">
                         <button class="btn btn-primary" type="Submit" id="inputGroupFileAddon04">Submit</button>
                     </div>
 
@@ -169,17 +167,17 @@
         <div class="container">
             <div class="row">
 
-                <div class="col-md">
-                    <button type="submit" class="btn btn-primary btn-lg"><i class="fab fa-instagram"></i></button>
-                    <button type="submit" class="btn btn-primary btn-lg"><i class="fab fa-twitter"></i></button>
-                    <button type="submit" class="btn btn-primary btn-lg"><i class="fab fa-linkedin-in"></i></button>
-                    <button type="submit" class="btn btn-primary btn-lg"><i class="fab fa-facebook"></i></button>
-                </div>
+                  
+<div class="col-md">
+          <button type="button" class="btn btn-primary btn-lg" onclick="window.location.href='https://www.instagram.com';"><i class="fab fa-instagram"></i></button>
+            <button type="button" class="btn btn-primary btn-lg" onclick="window.location.href='https://twitter.com/login';"><i class="fab fa-twitter"></i></button>
+            <button type="button" class="btn btn-primary btn-lg" onclick="window.location.href='https://in.linkedin.com';"><i class="fab fa-linkedin-in"></i></button>
+            <button type="button" class="btn btn-primary btn-lg" onclick="window.location.href='https://www.facebook.com';"><i class="fab fa-facebook"></i></button>
+</div>
             </div>
         </div>
         </div>
     </section>
     <hr>
 </body>
-
 </html>
