--- a/templates/login.html
+++ b/templates/login.html
@@ -3,21 +3,21 @@
 	<title>Opportunities</title>
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<link rel="stylesheet" href="static/css/Login.css">
+	<link rel="stylesheet" href="../static/css/Login.css">
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower|Montserrat|Open+Sans|Raleway&display=swap" rel="stylesheet">
-	<link href="static/fontawesome/css/all.css" rel="stylesheet">
+	<link href="../static/fontawesome/css/all.css" rel="stylesheet">
 	
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/../static/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 </head>
 <body>
 	<section id="title">
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			
-			<h2><img src="static/Images/Logo.jpg"><sub>  Opportunities</sub></h2>
-			<button class="btn btn-outline-success btn-lg my-2 my-sm-0 ml-auto" type="submit" onclick = "window.location.href = 'Registration.html';" style="margin-right: 20px;"><i class="fas fa-user-friends">  Sign Up</i></button>
+			<h2><img src="../static/Images/Logo.jpg"><sub>  Opportunities</sub></h2>
+			<button class="btn btn-outline-success btn-lg my-2 my-sm-0 ml-auto" type="submit" onclick="window.location.href = 'registration.html';" style="margin-right: 20px;"><i class="fas fa-user-friends">  Sign Up</i></button>
 		</nav>
 	</section>
 	<section id="Middle">
@@ -32,16 +32,16 @@
   		</ol>
   		<div class="carousel-inner">
     	<div class="carousel-item active">
-      	<img src="static/Images/job2.jpg" class="d-block w-100" alt="...">
+      	<img src="../static/Images/job2.jpg" class="d-block w-100" alt="...">
     	</div>
     	<div class="carousel-item">
-      	<img src="static/Images/Job3.jpg" class="d-block w-100" alt="...">
+      	<img src="../static/Images/Job3.jpg" class="d-block w-100" alt="...">
     	</div>
     	<div class="carousel-item">
-      	<img src="static/Images/Job3.png" class="d-block w-100" alt="...">
+      	<img src="../static/Images/Job3.png" class="d-block w-100" alt="...">
     	</div>
     	<div class="carousel-item">
-      	<img src="static/Images/Job4.jpg" class="d-block w-100" alt="...">
+      	<img src="../static/Images/Job4.jpg" class="d-block w-100" alt="...">
     	</div>
   		</div>
   		<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -61,19 +61,19 @@
 <div class="container-md-6">
 	<div class="row">
 		<div class="col">
-	<form action="/login" method="post">
+	<form>
   <div class="form-group">
     <label for="exampleInputEmail1">Username</label>
-    <input type="email" name = "username" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">Password</label>
-    <input type="password" name = "password" class="form-control" id="exampleInputPassword1">
+    <input type="password" class="form-control" id="exampleInputPassword1">
   </div>
   <div class="form-group">
       <label for="inputState">Catogary</label>
-      <select id="inputState" name="categ" class="form-control">
+      <select id="inputState" class="form-control">
          <option selected>Select...</option>
         <option>Admin</option>
         <option>User</option>
@@ -81,12 +81,12 @@
     </div>
   <button type="submit" class="btn btn-primary btn-lg" style="border-radius: 20px;">Login</button>
 <br><br>
-<a href="">Forgot password?</a>
+<a href="ForgotPassword.html">Forgot password?</a>
 <br><br>
 <hr>
 <label>or login via socials</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<button type="submit" class="btn btn-primary btn-lg"><i class="fab fa-google"></i></button>
-<button type="submit" class="btn btn-primary btn-lg"><i class="fab fa-facebook"></i></button>
+<button type="button" class="btn btn-primary btn-lg" onclick="window.location.href='https://accounts.google.com';"><i class="fab fa-google"></i></button>
+<button type="button" class="btn btn-primary btn-lg" onclick="window.location.href='https://www.facebook.com';"><i class="fab fa-facebook"></i></button>
 <hr>
 </form>
 		</div>
@@ -114,10 +114,10 @@
 	<div class="row">
 	
 <div class="col-md">
-					<button type="submit" class="btn btn-primary btn-lg"><i class="fab fa-instagram"></i></button>
-						<button type="submit" class="btn btn-primary btn-lg"><i class="fab fa-twitter"></i></button>
-						<button type="submit" class="btn btn-primary btn-lg"><i class="fab fa-linkedin-in"></i></button>
-						<button type="submit" class="btn btn-primary btn-lg"><i class="fab fa-facebook"></i></button>
+					<button type="button" class="btn btn-primary btn-lg" onclick="window.location.href='https://www.instagram.com';"><i class="fab fa-instagram"></i></button>
+						<button type="button" class="btn btn-primary btn-lg" onclick="window.location.href='https://twitter.com/login';"><i class="fab fa-twitter"></i></button>
+						<button type="button" class="btn btn-primary btn-lg" onclick="window.location.href='https://in.linkedin.com';"><i class="fab fa-linkedin-in"></i></button>
+						<button type="button" class="btn btn-primary btn-lg" onclick="window.location.href='https://www.facebook.com';"><i class="fab fa-facebook"></i></button>
 </div>
 		</div>
 	</div>
