--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,30 +1,31 @@
 <html>
 <head>
-	<title>Home</title>
+	<title>Create Account</title>
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<link rel="stylesheet" href="Login.css">
-	<link href="https://fonts.googleapis.com/css?family=Indie+Flower|Montserrat|Open+Sans|Raleway&display=swap" rel="stylesheet">
-	<link href="fontawesome/css/all.css" rel="stylesheet">
-	
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="../static/css/Login.css">
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Montserrat|Open+Sans|Raleway&display=swap" rel="stylesheet">
+  <link href="../static/fontawesome/css/all.css" rel="stylesheet">
+  
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
 
 </head>
-<body>
+<body class="Back">
 <section id="title">
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<h2><img src="Images/Logo.jpg"><sub>  Opportunities</sub></h2>
+			<h2><img src="../static/Images/Logo.jpg"><sub>  Opportunities</sub></h2>
 		</nav>
 	</section>
 <section id="Registration" style="margin-top: 60px;">
 
 <div class="container">
-	<h3><center><u>Sign Up</u></center></h3>
-	<div class="row" style="margin-top: 50px;">
-		<div class="col">
+	<h3><center><u>Create Account</u></center></h3>
+	<div class="row" style="margin-top: 30px;" id="back">
+		<div class="col-md" style="margin-top: 30px;">
 		
 				<form style="margin-left: 260px;">
  
@@ -116,13 +117,11 @@
   </div>
 
   <div class="form-group row" style="margin-top: 40px;">
-    <div class="col-sm-5">
-      <button type="submit" class="btn btn-primary">Sign in</button>
+    <div class="col-md-8">
+      <button type="submit" class="btn btn-danger btn-lg">Sign in</button>
     </div>
   </div>
 </form>
-
-
 		</div>
 	</div>
 </div>
