--- a/templates/login.html
+++ b/templates/login.html
@@ -61,15 +61,15 @@
 <div class="container-md-6">
 	<div class="row">
 		<div class="col">
-	<form>
+	<form action = "login" method="post">
   <div class="form-group">
     <label for="exampleInputEmail1">Username</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    <input type="email" class="form-control" id="exampleInputEmail1" name = "username" aria-describedby="emailHelp">
     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1">
+    <input type="password" class="form-control" name = "password" id="exampleInputPassword1">
   </div>
   <div class="form-group">
       <label for="inputState">Catogary</label>
