--- a/templates/adminPanel.html
+++ b/templates/adminPanel.html
@@ -76,7 +76,7 @@
           Jobs
         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">Active Jobs</a>
+                            <a class="dropdown-item" href="{{  url_for('jobs') }}">Active Jobs</a>
                             <a class="dropdown-item" href="#">Inactive Jobs</a>
                             <a class="dropdown-item" href="#">Applied Jobs</a>
                         </div>
