--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,7 @@
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			
 			<h2><img src="../static/Images/Logo.jpg"><sub>  Opportunities</sub></h2>
-			<button class="btn btn-outline-success btn-lg my-2 my-sm-0 ml-auto" type="submit" onclick="window.location.href = 'registration.html';" style="margin-right: 20px;"><i class="fas fa-user-friends">  Sign Up</i></button>
+			<button class="btn btn-outline-success btn-lg my-2 my-sm-0 ml-auto" type="submit" onclick="window.location.href = '{{  url_for('registration') }}';" style="margin-right: 20px;"><i class="fas fa-user-friends">  Sign Up</i></button>
 		</nav>
 	</section>
 	<section id="Middle">
