--- a/templates/registration.html
+++ b/templates/registration.html
@@ -27,20 +27,8 @@
 	<div class="row" style="margin-top: 30px;" id="back">
 		<div class="col-md" style="margin-top: 30px;">
 		
-				<form style="margin-left: 260px;">
- 
-<div class="form-group row">
-    <label for="inputName" class="col-sm-2 col-form-label">First Name</label>
-    <div class="col-sm-5">
-      <input type="text" class="form-control" id="inputName">
-    </div>
-  </div>
-<div class="form-group row">
-    <label for="inputName2" class="col-sm-2 col-form-label">Last Name</label>
-    <div class="col-sm-5">
-      <input type="text" class="form-control" id="inputLastName">
-    </div>
-  </div>
+				<form style="margin-left: 260px;" action=" " method = "post">
+
 
 <div class="form-group row">
     <label for="inputName3" class="col-sm-2 col-form-label">Username</label>
@@ -61,39 +49,6 @@
       <input type="password" class="form-control" id="inputPassword3">
     </div>
   </div>
-   <div class="form-group row">
-    <label for="inputPassword3" class="col-sm-2 col-form-label">Re-type Password</label>
-    <div class="col-sm-5">
-      <input type="password" class="form-control" id="inputPassword3">
-    </div>
-  </div>
-<div class="form-group row">
-    <label for="inputNumber" class="col-sm-2 col-form-label">Phone Number</label>
-    <div class="col-sm-5">
-      <input type="tel" class="form-control" id="inputNumber">
-    </div>
-  </div>
-
-
-  <fieldset class="form-group">
-    <div class="row">
-      <legend class="col-form-label col-sm-2 pt-0">Gender</legend>
-      <div class="col-sm-5">
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
-          <label class="form-check-label" for="gridRadios1">
-            Male
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
-          <label class="form-check-label" for="gridRadios2">
- 			Female
-          </label>
-        </div>
-         </div>
-    </div>
-  </fieldset>
 
 <div class="form-group row">
     <label for="inputState" class="col-sm-2 col-form-label">Security Questions</label>
