--- a/templates/adminPanel.html
+++ b/templates/adminPanel.html
@@ -48,7 +48,7 @@
                         <i class="fas fa-user-friends"></i>
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuOffset">
-                        <a class="dropdown-item" href="#">Log out</a>
+                        <a class="dropdown-item" href="{{  url_for('login') }}">Log out</a>
                         <a class="dropdown-item" href="#">Settings</a>
                     </div>
                 </div>
