--- a/templates/login.html
+++ b/templates/login.html
@@ -61,7 +61,7 @@
 <div class="container-md-6">
 	<div class="row">
 		<div class="col">
-	<form action = "login" method="post">
+	<form action = "/" method="post">
   <div class="form-group">
     <label for="exampleInputEmail1">Username</label>
     <input type="email" class="form-control" id="exampleInputEmail1" name = "username" aria-describedby="emailHelp">
